--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="ru">
+<html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
@@ -12,14 +12,14 @@
   </style>
 </head>
 <body>
-  <h2>Sentiment по твиту авиакомпании</h2>
+  <h2>Airline tweet sentiment</h2>
 
-  <p>Вставь текст твита и нажми “Predict”.</p>
+  <p>Paste a tweet and click “Predict”.</p>
   <textarea id="text" placeholder="My flight was delayed for 3 hours..."></textarea>
   <br/>
   <button id="btn">Predict</button>
 
-  <h3>Результат</h3>
+  <h3>Result</h3>
   <pre id="out">—</pre>
 
   <script>
